# easynmea

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  VERSIONING_POLICY.md  gnss_l86_example  gnss_l86_example.cpp  gnss_l86_lib.cpp  gnss_l86_lib.h  gnss_l86_output.txt  nmea_0183_protocol_description.txt  readthedocs.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/install-gtest-ubuntu/: action.yml
.github/workflows/: automated_testing.yml  codeql-analysis.yml  publish_docker_image.yml
cmake/modules/: FindAsio.cmake  FindSphinx.cmake  FindwiringPi.cmake
cmake/packaging/: config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/rst/: index.rst  spelling_wordlist.txt
docs/rst/api_reference/: api_reference.rst  easynmea.rst  gnssinterface.rst  opennmea.rst
docs/rst/api_reference/data/: data_index.rst  gpggadata.rst  nmea0183data.rst
docs/rst/api_reference/types/: bitmask.rst  nmea0183datakind.rst  nmea0183datakindmask.rst  returncode.rst  types_index.rst
docs/rst/developer_documentation/: developer_documentation.rst  docs_testing.rst  library_architecture.rst  testing_infrastructure.rst
docs/rst/developer_documentation/lib_system_tests/: lib_system_tests.rst
docs/rst/developer_documentation/lib_unit_tests/: data.rst  easynmea.rst  easynmeacoder.rst  easynmeaimpl.rst  gnssinterface.rst  gnssinterfaceimpl.rst  lib_unit_tests.rst  opennmea.rst  opennmeaimpl.rst  serialinterface.rst
docs/rst/examples/: examples.rst
docs/rst/getting_started/: getting_started.rst
docs/rst/include/: aliases.rst
docs/rst/installation/: build_documentation.rst  cmake_options.rst  installation.rst  ubuntu_installation.rst  windows_installation.rst
docs/rst/nmea_data_types/: nmea_data_types.rst
docs/rst/snippets/: snippets.cpp
docs/rst/usage/: usage.rst
docs/test/: CMakeLists.txt
docs/uml/: EasyNmea.puml  EasyNmeaCoderTests.puml  EasyNmeaImpl.puml  EasyNmeaImplTests.puml  EasyNmeaTests.puml  GnssInterface.puml  GnssInterfaceImpl.puml  GnssInterfaceImplTests.puml  GnssInterfaceTests.puml  OpenNmea.puml  OpenNmeaImpl.puml  OpenNmeaImplTests.puml  OpenNmeaTests.puml  SerialInterface.puml  SerialInterfaceTests.puml  data.puml  impl_level.puml  library_levels.puml  system_tests_arch.puml  system_tests_arch_sequence.puml
examples/: CMakeLists.txt  gnss_l86_example.cpp  gpgga_example.cpp
include/: gnss_l86_lib.h
include/easynmea/: Bitmask.hpp  EasyNmea.hpp  data.hpp  types.hpp  visibility.hpp
include/gnss_interface/: Bitmask.hpp  GnssInterface.hpp  data.hpp  types.hpp
include/gnss_l86_interface/: gnss_l86_lib.hpp
include/opennmea/: Bitmask.hpp  OpenNmea.hpp  data.hpp  types.hpp
resources/docker/: Dockerfile  README.md
src/cpp/: CMakeLists.txt  EasyNmea.cpp  EasyNmeaCoder.hpp  EasyNmeaImpl.cpp  EasyNmeaImpl.hpp  FixedSizeQueue.hpp  GnssInterface.cpp  GnssInterfaceImpl.cpp  GnssInterfaceImpl.hpp  OpenNmea.cpp  OpenNmeaImpl.cpp  OpenNmeaImpl.hpp  SerialInterface.hpp  gnss_l86_lib.cpp
test/: CMakeLists.txt
test/system/: CMakeLists.txt  requirements.txt  send2serial.py  system_tests.cpp  system_tests.py  system_tests.schema.json  system_tests.yaml.in
test/system/nmea_sentences/: gnss_sentences.nmea
test/system/validation/: stop_sending_data.yaml  validation.schema.json
test/unit/: CMakeLists.txt
test/unit/EasyNmea/: CMakeLists.txt  EasyNmeaImplMock.hpp  EasyNmeaTests.cpp
test/unit/EasyNmeaCoder/: CMakeLists.txt  EasyNmeaCoderTests.cpp
test/unit/EasyNmeaImpl/: CMakeLists.txt  EasyNmeaImplTests.cpp  SerialInterfaceMock.hpp
test/unit/GnssInterface/: CMakeLists.txt  GnssInterfaceImplMock.hpp  GnssInterfaceTests.cpp
test/unit/GnssInterfaceImpl/: CMakeLists.txt  GnssInterfaceImplTests.cpp  SerialInterfaceMock.hpp
test/unit/OpenNmea/: CMakeLists.txt  OpenNmeaImplMock.hpp  OpenNmeaTests.cpp
test/unit/OpenNmeaImpl/: CMakeLists.txt  OpenNmeaImplTests.cpp  SerialInterfaceMock.hpp
test/unit/SerialInterface/: CMakeLists.txt  SerialInterfaceTests.cpp  SerialPortMock.hpp
test/unit/data/: CMakeLists.txt  DataTests.cpp
